@@ -12,8 +12,9 @@ defined('_JEXEC') or die;
 
 JHtml::addIncludePath(JPATH_COMPONENT.'/helpers/html');
 JHtml::_('behavior.tooltip');
-$function = JRequest::getVar('function', 'jSelectPosition');
-$lang = JFactory::getLanguage();
+
+$function	= JRequest::getCmd('function', 'jSelectPosition');
+$lang		= JFactory::getLanguage();
 $ordering	= $this->state->get('list.ordering');
 $direction	= $this->state->get('list.direction');
 $clientId	= $this->state->get('filter.client_id');
