@@ -11,8 +11,8 @@ defined('_JEXEC') or die;
 
 JHtml::addIncludePath(JPATH_COMPONENT.'/helpers/html');
 JHtml::_('behavior.tooltip');
-$field = JRequest::getVar('field');
-$function = 'jSelectUser_'.$field;
+$field		= JRequest::getCmd('field');
+$function	= 'jSelectUser_'.$field;
 $listOrder	= $this->state->get('list.ordering');
 $listDirn	= $this->state->get('list.direction');
 ?>
